[package]
name = "allocator_api"
version = "0.2.0"
authors = ["The Rust Project Developers", "Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
description = """
A copy of the unstable allocator_api
(https://github.com/rust-lang/rust/issues/32838)

Usable with stable rust, but requires 1.25.
"""
repository = "https://github.com/glandium/allocator_api"
keywords = ["no_std", "allocator"]

[features]
i128 = []
fused = []

[build-dependencies]
rustc_version = "0.2"
