[package]
name = "allocator_api"
version = "0.4.0"
authors = ["The Rust Project Developers", "Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
description = """
This is a copy of the unstable allocator_api
(https://github.com/rust-lang/rust/issues/32838) and of parts of the unstable
alloc feature.

Usable with stable rust, but requires 1.26.
"""
repository = "https://github.com/glandium/allocator_api"
readme = "README.md"
keywords = ["no_std", "allocator"]

[features]
default = ["std"]
std = []

[build-dependencies]
rustc_version = "0.2"
